k8s-django-react/django-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-k8s-web-deployment
  labels:
    app: django-k8s-web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-k8s-web-deployment
  template:
    metadata:
      labels:
        app: django-k8s-web-deployment
    spec:
      containers:
      - name: django-k8s
        image: acraks069.azurecr.io/acraks069/djaksacr:v5
        # image: nginx
        imagePullPolicy: Always
        resources:
          limits:
            memory: "500Mi"
            cpu: "600m"
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: django-persistent-storage
          mountPath: /djk8s
        # imagePullSecrets:
        # - name: oursmarketplacehub
      
      volumes:
      - name: django-persistent-storage
        persistentVolumeClaim:
          claimName: djk8s-claim
