k8s-django-react/postgres-statefull.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres 
  namespace: addex
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432 
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: addex
spec:
  serviceName: postgres
  replicas: 3
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-pv-claim
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-pv-claim
      labels:
        app: postgres
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: efs-sc
      resources:
        requests:
          storage: 10Gi
