k8s-django-react/alb-ingress.yaml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-namedbasedvhost
  namespace: addex
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: django-react-k8s
    # Ingress Core Settings
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0b9ea77dc087a10f5, subnet-09dac8609c83bbe99
    alb.ingress.kubernetes.io/security-groups: sg-0441e92c9153b9316
    alb.ingress.kubernetes.io/target-node-labels: role=dev
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'   
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-south-1:239428837152:certificate/5bf68c53-f467-4b16-89ae-729798dc2494
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # External DNS - For creating a Record Set in Route53
    # external-dns.alpha.kubernetes.io/hostname: default101.stacksimplify.com 
    # # For Fargate
    # alb.ingress.kubernetes.io/target-type: ip  
spec:
  ingressClassName: aws-ingress-class   # Ingress Class                  
  # defaultBackend:
  #   service:
  #     name: tomcatapp
  #     port:
  #       number: 8080 
  rules:
    - host: task.cloudyninjas.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-web
                port: 
                  number: 80
    - host: api.cloudyninjas.com
      http:
        paths:                  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-api
                port: 
                  number: 8000
    

# Important Note-1: In path based routing order is very important, if we are going to use  "/*", try to use it at the end of all rules.                                        
                        
# 1. If  "spec.ingressClassName: aws-ingress-class" not specified, will reference default ingress class on this kubernetes cluster
# 2. Default Ingress class is nothing but for which ingress class we have the annotation `ingressclass.kubernetes.io/is-default-class: "true"`
